Fix MaximumDistanceInArrays_Solution